fix code style on mobile

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -395,7 +395,7 @@ figure {
   padding-top: 0;
   margin-bottom: 1.45rem;
 }
-pre {
+/* pre {
   margin-left: 0;
   margin-right: 0;
   margin-top: 0;
@@ -407,7 +407,7 @@ pre {
   overflow: auto;
   word-wrap: normal;
   padding: 1.45rem;
-}
+} */
 table {
   margin-left: 0;
   margin-right: 0;
@@ -617,5 +617,6 @@ tt
     display: inline-block;
   }
 }
-
-
+.post-main {
+  width: 100%;
+}
